# naturalist

./: .gdbinit  .gitignore  CMakeLists.txt  Jenkinsfile  Makefile  decode-calls.py  flash-naturalist-standard  flash-test  flash-test-then-naturalist-standard  package-gerbers.sh  tail-device
firmware/common/: board_definition.cpp  board_definition.h
firmware/main/: CMakeLists.txt  arduino-libraries  config.h.template  dependencies.sd  flash_with_bootloader_and_noinit.ld  main.cpp  naturalist_core_module.cpp  naturalist_core_module.h  readings.cpp  readings.h  samd21x18_bootloader_large.ld  samd21x18_bootloader_small.ld
firmware/module/: CMakeLists.txt  arduino-libraries  main.cpp  readings.cpp  readings.h
firmware/test/: CMakeLists.txt  arduino-libraries  check_core.cpp  check_core.h  check_naturalist.cpp  check_naturalist.h  config.h.template  dependencies.sd  main.cpp
hardware/: fk-naturalist-cache.lib  fk-naturalist-rescue.lib  fk-naturalist.kicad_pcb  fk-naturalist.net  fk-naturalist.pro  fk-naturalist.sch  fp-lib-table
hardware/gerbers/: fk-naturalist-B.Cu.gbr  fk-naturalist-B.Mask.gbr  fk-naturalist-B.Paste.gbr  fk-naturalist-B.SilkS.gbr  fk-naturalist-Edge.Cuts.gbr  fk-naturalist-F.Cu.gbr  fk-naturalist-F.Mask.gbr  fk-naturalist-F.Paste.gbr  fk-naturalist-F.SilkS.gbr  fk-naturalist-NPTH.drl  fk-naturalist.drl
hardware/main-board/: fk-naturalist-cache.lib  fk-naturalist-rescue.lib  fk-naturalist.kicad_pcb  fk-naturalist.net  fk-naturalist.pro  fk-naturalist.sch  fp-lib-table  sym-lib-table
hardware/main-board/gerbers/: fk-naturalist-B.Cu.gbr  fk-naturalist-B.Mask.gbr  fk-naturalist-B.Paste.gbr  fk-naturalist-B.SilkS.gbr  fk-naturalist-Edge.Cuts.gbr  fk-naturalist-F.Cu.gbr  fk-naturalist-F.Mask.gbr  fk-naturalist-F.Paste.gbr  fk-naturalist-F.SilkS.gbr  fk-naturalist-NPTH.drl  fk-naturalist-PTH.drl  fk-naturalist.drl
hardware/main-board/rescue-backup/: fk-naturalist-2018-07-23-20-07-15.pro  fk-naturalist-cache-2018-07-23-20-07-15.lib
hardware/sensor-board/: fk-naturalist-sensors-cache.lib  fk-naturalist-sensors-rescue.lib  fk-naturalist-sensors.kicad_pcb  fk-naturalist-sensors.net  fk-naturalist-sensors.pro  fk-naturalist-sensors.sch  fp-info-cache  sym-lib-table
hardware/sensor-board/gerbers/: fk-naturalist-sensors-B.Cu.gbr  fk-naturalist-sensors-B.Mask.gbr  fk-naturalist-sensors-B.Paste.gbr  fk-naturalist-sensors-B.SilkS.gbr  fk-naturalist-sensors-Edge.Cuts.gbr  fk-naturalist-sensors-F.Cu.gbr  fk-naturalist-sensors-F.Mask.gbr  fk-naturalist-sensors-F.Paste.gbr  fk-naturalist-sensors-F.SilkS.gbr  fk-naturalist-sensors-NPTH.drl  fk-naturalist-sensors-PTH.drl  fk-naturalist-sensors.drl
hardware/sensor-board/panelized/: _autosave-fk-naturalist-sensors.kicad_pcb  fk-naturalist-sensors.kicad_pcb
hardware/sensor-board/panelized/gerbers/: fk-naturalist-sensors-B_Cu.gbr  fk-naturalist-sensors-B_Mask.gbr  fk-naturalist-sensors-B_Paste.gbr  fk-naturalist-sensors-B_SilkS.gbr  fk-naturalist-sensors-Edge_Cuts.gbr  fk-naturalist-sensors-F_Cu.gbr  fk-naturalist-sensors-F_Mask.gbr  fk-naturalist-sensors-F_Paste.gbr  fk-naturalist-sensors-F_SilkS.gbr  fk-naturalist-sensors-NPTH.drl  fk-naturalist-sensors-PTH.drl  fk-naturalist-sensors-V.gbr
hardware/sensor-board/rescue-backup/: fk-naturalist-sensors-cache-2018-07-23-20-07-33.lib
